--- a/style.css
+++ b/style.css
@@ -69,15 +69,15 @@ html {
   @media only screen and (max-width: 75em) {
     html {
       font-size: 59%;
-      overflow-x: hidden; } }
+       } }
   @media only screen and (max-width: 56.25em) {
     html {
       font-size: 56%;
-      overflow-x: hidden; } }
+      } }
   @media only screen and (min-width: 112.5em) {
     html {
       font-size: 65%;
-      overflow-x: hidden; } }
+       } }
 
 body {
   box-sizing: border-box;
